; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/ruptime/extr_ruptime.c_interval.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/ruptime/extr_ruptime.c_interval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@interval.resbuf = internal global [32 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [14 x i8] c"%s      ??:??\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"%s %4d+%02d:%02d\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"%s      %2d:%02d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i8*)* @interval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @interval(i32 %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 (i8*, i32, i8*, i8*, ...) @snprintf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @interval.resbuf, i64 0, i64 0), i32 32, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* %12)
  store i8* getelementptr inbounds ([32 x i8], [32 x i8]* @interval.resbuf, i64 0, i64 0), i8** %3, align 8
  br label %40

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  %16 = add nsw i32 %15, 59
  %17 = sdiv i32 %16, 60
  store i32 %17, i32* %8, align 4
  %18 = load i32, i32* %8, align 4
  %19 = sdiv i32 %18, 60
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %8, align 4
  %21 = srem i32 %20, 60
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %7, align 4
  %23 = sdiv i32 %22, 24
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = srem i32 %24, 24
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* %6, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %34

28:                                               ; preds = %14
  %29 = load i8*, i8** %5, align 8
  %30 = load i32, i32* %6, align 4
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* %8, align 4
  %33 = call i32 (i8*, i32, i8*, i8*, ...) @snprintf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @interval.resbuf, i64 0, i64 0), i32 32, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i8* %29, i32 %30, i32 %31, i32 %32)
  br label %39

34:                                               ; preds = %14
  %35 = load i8*, i8** %5, align 8
  %36 = load i32, i32* %7, align 4
  %37 = load i32, i32* %8, align 4
  %38 = call i32 (i8*, i32, i8*, i8*, ...) @snprintf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @interval.resbuf, i64 0, i64 0), i32 32, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0), i8* %35, i32 %36, i32 %37)
  br label %39

39:                                               ; preds = %34, %28
  store i8* getelementptr inbounds ([32 x i8], [32 x i8]* @interval.resbuf, i64 0, i64 0), i8** %3, align 8
  br label %40

40:                                               ; preds = %39, %11
  %41 = load i8*, i8** %3, align 8
  ret i8* %41
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
